# aoc2022

./: .gitignore  01_CalorieCounting.hs  02_RockPaperScissors.hs  03_RucksackReorganization.hs  aoc2022.cabal
c/: 01_CalorieCounting.c  02_RockPaperScissors.c  03_RucksackReorganization.c  04_CampCleanup.c  08_TreetopTreeHouse.c  20_GrovePositioningSystem.c  Makefile
hs/: 02_RockPaperScissors.hs  04_CampCleanup.hs  05_SupplyStacks.hs  06_TuningTrouble.hs  09_RopeBridge.hs  10_CathodeRayTube.hs  13_DistressSignal.hs  14_RegolithReservoir.hs  aoc2022.cabal
input/: 02.txt
py/: 07_NoSpaceLeftOnDevice.py  11_MonkeyInTheMiddle.py  12_HillClimbingAlgorithm.py  16_ProboscideaVolcanium.py  18_BoilingBoulders.py
