cabal-version:       >=1.10

name:                aoc2022
version:             0.1.0.0
synopsis:            Advent of Code 2022
author:              Connor Lane Smith
maintainer:          cls@lubutu.com
build-type:          Simple

executable 01_CalorieCounting
  main-is:             01_CalorieCounting.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010

executable 02_RockPaperScissors
  main-is:             02_RockPaperScissors.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010

executable 03_RucksackReorganization
  main-is:             03_RucksackReorganization.hs
  build-depends:       base >=4.13 && <4.14, containers
  default-language:    Haskell2010

executable 04_CampCleanup
  main-is:             04_CampCleanup.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010

executable 05_SupplyStacks
  main-is:             05_SupplyStacks.hs
  build-depends:       base >=4.13 && <4.14
  default-language:    Haskell2010

executable 06_TuningTrouble
  main-is:             06_TuningTrouble.hs
  build-depends:       base >=4.13 && <4.14, containers
  default-language:    Haskell2010

executable 09_RopeBridge
  main-is:             09_RopeBridge.hs
  build-depends:       base >=4.13 && <4.14, containers
  default-language:    Haskell2010
